main/default/objects/Case/fields/Customer_Statement__c.field-meta.xml
<CustomField>
    <fullName>Customer_Statement__c</fullName>
    <label>Customer Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>