main/default/objects/Case/fields/Dispute_Amount__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Amount__c</fullName>
    <label>Dispute Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>