main/default/objects/Case/fields/Dispute_Match_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Match_Confidence__c</fullName>
    <label>Dispute Match Confidence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>