main/default/objects/Case/fields/Dispute_Stage__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Stage__c</fullName>
    <label>Dispute Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Transaction Identified</fullName>
            </value>
            <value>
                <fullName>Provisional Credit Issued</fullName>
            </value>
            <value>
                <fullName>Evidence Requested</fullName>
            </value>
            <value>
                <fullName>Evidence Received</fullName>
            </value>
            <value>
                <fullName>Under Bank Review</fullName>
            </value>
            <value>
                <fullName>Resolved - Customer Credited</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>