main/default/objects/Case/fields/Disputed_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Disputed_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disputed Transaction</label>
    <referenceTo>FinancialAccountTransaction</referenceTo>
    <relationshipLabel>Card Disputes</relationshipLabel>
    <relationshipName>CardDisputes</relationshipName>
    <type>Lookup</type>
</CustomField>