main/default/objects/Case/fields/Evidence_Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Content_Document_Id__c</fullName>
    <label>Evidence Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>