main/default/objects/Case/fields/Evidence_Received__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evidence Received</label>
    <type>Checkbox</type>
</CustomField>