main/default/objects/Case/fields/Expected_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Resolution_Date__c</fullName>
    <label>Expected Resolution Date</label>
    <type>Date</type>
</CustomField>