main/default/objects/Case/fields/Extracted_Bill_Data__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Bill_Data__c</fullName>
    <label>Extracted Bill Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>