main/default/objects/Case/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account</label>
    <referenceTo>FinancialAccount</referenceTo>
    <relationshipLabel>Card Disputes</relationshipLabel>
    <relationshipName>CardDisputes</relationshipName>
    <type>Lookup</type>
</CustomField>