main/default/objects/Case/fields/Merchant_Location_Hint__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Location_Hint__c</fullName>
    <label>Merchant / Location Hint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>