main/default/objects/Case/fields/Provisional_Credit_Issued__c.field-meta.xml
<CustomField>
    <fullName>Provisional_Credit_Issued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provisional Credit Issued</label>
    <type>Checkbox</type>
</CustomField>