main/default/objects/Case/fields/Provisional_Credit_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Provisional_Credit_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provisional Credit Transaction</label>
    <referenceTo>FinancialAccountTransaction</referenceTo>
    <relationshipLabel>Provisional Credit Disputes</relationshipLabel>
    <relationshipName>ProvisionalCreditDisputes</relationshipName>
    <type>Lookup</type>
</CustomField>